<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etPersonName"
                android:text="@string/name_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etPersonName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonName" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etEmail"
                android:text="@string/mail_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etPersonName" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <TextView
                android:id="@+id/tvBodyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/body_header"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/tvGender"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@id/etAge"
                android:text="@string/age_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etAge"
                app:layout_constraintTop_toBottomOf="@+id/tvBodyTitle" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/spGender"
                android:text="@string/gender_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/spGender"
                app:layout_constraintTop_toBottomOf="@+id/etAge" />

            <Spinner
                android:id="@+id/spGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/gender"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etWeight"
                android:text="@string/weight_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etWeight"
                app:layout_constraintTop_toBottomOf="@+id/spGender" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:labelFor="@id/etHeight"
                android:text="@string/height_title"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etWeight"
                app:layout_constraintTop_toBottomOf="@+id/etWeight" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight" />

            <Button
                android:id="@+id/bSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="@+id/bConnectHR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bConnectHR" />

            <Button
                android:id="@+id/bConnectHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/connectHR"
                app:layout_constraintStart_toStartOf="@+id/tvStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

            <TextView
                android:id="@+id/tvStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/status"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/etHeight"
                app:layout_constraintTop_toBottomOf="@+id/etHeight" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/disconnected"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="@+id/tvStatusTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvStatusTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>